Fixed mobile layout for mentor detail page. Bugs remaining: 1. Comment box 2. Carousel for multiple service 3. minor layout issue with service box

--- a/src/MentorComponent/mentor.css
+++ b/src/MentorComponent/mentor.css
@@ -722,9 +722,11 @@ font-size: 2em;
     opacity: 1;
   }
 
+  .mentor-detail-info-container {
+    flex-wrap: wrap;
+  }
   .mentor-detail-info-container>.item  {
-
-    padding-top: 2em;
-
+    min-width: 40%;
+    margin: 1em 0em;
   }
 }
